jenkins/default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-http-backend
spec:
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
